--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -8,6 +8,7 @@ overrides: []
 parserOptions:
   ecmaVersion: latest
   sourceType: module
+  project: ["./eslintrc.yml"],
 plugins:
   - react
 rules: {}
