--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -8,7 +8,10 @@ overrides: []
 parserOptions:
   ecmaVersion: latest
   sourceType: module
-  project: ["./eslintrc.yml"],
+  project: 'tsconfig.json'
 plugins:
   - react
-rules: {}
+rules: {
+  '@typescript-eslint/explicit-module-boundary-types': ['off'],
+  '@typescript-eslint/explicit-function-return-type': ['off']
+}
