--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "@types/node": "^16.18.32",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router": "^6.11.2",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "sort-by": "^1.2.0",
     "styled-components": "^6.0.0-rc.2",
     "web-vitals": "^2.1.4"
   },
