--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -13,5 +13,6 @@ plugins:
   - react
 rules: {
   '@typescript-eslint/explicit-module-boundary-types': ['off'],
-  '@typescript-eslint/explicit-function-return-type': ['off']
+  '@typescript-eslint/explicit-function-return-type': ['off'],
+  '@typescript-eslint/indent': ["error", 4]
 }
