Add Header and symbol component :rocket:

--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -9,7 +9,7 @@ WORKDIR /app
 # Set the working directory to /app inside the container
 WORKDIR /app
 # Copy app files
-COPY . .
+COPY .. .
 # Install dependencies (npm ci makes sure the exact versions in the lockfile gets installed)
 RUN npm install
 # Build the app
